--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <h1 class="cabecalho__titulo"><img class="cabecalho__imagem" src="avatar.jpeg" alt="avatar da fran"></h1>
 
         <ul class="cabecalho__menu">
-            <li class="cabecalho__menu-item"> Sobre</li>
-            <li class="cabecalho__menu-item"> Professores</li>
+            <li class="cabecalho__menu-item"> perfil</li>
+            <li class="cabecalho__menu-item"> carrinho</li>
         </ul>
 
     </header>
     <main>
         <section class="escola">
             <div class="escola__div">
-                <h2 class="escola__titulo">Escola Estadual do Campo Cerrado das Cinzas</h2>
-                <p class="escola__paragrafo">aqui vou coloar um texto falando sobrea minha escola que é do campo e muito
-                    linda</p>
+                <h2 class="escola__titulo">suplementos</h2>
+                <p class="escola__paragrafo">nossos produtos tem otima qualidade
+                    </p>
             </div>
             <img class="escola__imagem" src="avatar.jpeg" alt="foto da escola estadual do campo cerrado das cinzas">
 
